--- a/next.html
+++ b/next.html
@@ -114,7 +114,7 @@
         </div> 
         <a href="https://api.whatsapp.com/send?phone=6287824306952&text=Terimakasih%20Dapaaaaaaa%20ILOVEE%20YOUUUU" class="button">BALAS</a>
         <div class="text text-bottom-left">
-            Semoga kita bisa lebih lama lagi bersamanya, kalau kamu punya masalah bilang ke aku yaa, akuu siapp dengerin cerita kamuu koo, jangan keseringan insecure okeyyy, maaff yaaa kloo jelekk hhehe
+            Maaf yaaa kaloo terlatt hehehe, Semoga kita bisa lebih lama lagi bersamanya, kalau kamu punya masalah bilang ke aku yaa, akuu siapp dengerin cerita kamuu koo, jangan keseringan insecure okeyyy, maaff yaaa kloo jelekk hhehe
         </div> 
         <div class="box box-bottom-right"> 
             <img src="My-Girl.jpg" alt="Image 2"> 
